# auth_custom

./: .gitignore  README.md  build.bat  pyproject.toml
airflow/: build.sh  pyproject.toml
airflow/src/airflow_auth/: __init__ copy.py  __init__.py  custom.py  custom2.py  security_manager.py
airflow/src/airflow_auth/plugin/: plugin_blueprint.py  test_plugin.py
airflow/tests/: db_init.bat  db_init.sh  run_webserver.bat  run_webserver.sh  test.py
airflow/tests/airflow/: airflow.cfg  airflow.cfg.bak  airflow.db  webserver_config.py  webserver_config.py.bak
airflow/tests/airflow/plugins/: custom_menu.py
airflow/tests/plugins/: custom_menu.py
mlflow/: README.md  build.bat  build.sh  pyproject.toml
mlflow/src/mlflow_auth/: __init__.py
mlflow/tests/: basic_auth.db  basic_auth.ini  run_server.sh
mlruns/0/: meta.yaml
src/mlflow_custom/: __init__.py
src/mlflow_custom/templates/: index.html
src/static/css/: style.css
tests/mlruns/0/: meta.yaml
