[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow_auth"
version = "0.0.1"
authors = [
  { name="PYS", email="xian@hanafn.com" },
]
description = "This is backend system for mlstudio."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "apache-airflow",
  "Flask<4",
]

# [project.entry-points."mlflow.app"]
# airflow_auth = "airflow_auth:create_app"
